Sat Oct 20 11:42:00 2001  George Lebl <jirka@5z.com>

	* Release 1.4.1.1

	* gnome-utils.spec.in: further tweak the %files list

Sat Oct 20 11:33:50 2001  George Lebl <jirka@5z.com>

	* configure.in: raise version to 1.4.1.1, add cromagnon back

	* Makefile.am: make sure that cromagnon is part of the distribution

Sat Oct 20 11:23:03 2001  George Lebl <jirka@5z.com>

	* configure.in: fixes from bunk@fs.tum.de (Adrian Bunk)

	* gnome-utils.spec.in:  Fix the file list so that the rpm
	  doesn't want to own directories that are not it's own

Sun Oct 14 21:03:16 2001  Abel Cheung <maddog@linux.org.hk>

	* configure.in (GLADE_CFLAGS): Fix typo.

Fri Oct 05 11:31:04 2001  George Lebl <jirka@5z.com>

	* Release 1.4.1

Thu Oct 04 21:21:53 2001  George Lebl <jirka@5z.com>

	* logview/doc/C/Makefile.am: fix figures distribution

	* Makefile.am, configure.in: gtkhtml is optional, if
	  not found gtt will not be built.  Also make all the optional
	  directories always dist

Wed Oct 03 20:34:01 2001  George Lebl <jirka@5z.com>

	* logview/logview.c, logview/doc/C/topic.dat: add help menu

2001-10-02 - John Fleck <jfleck@inkstain.net>
	add logview docs to the build

2001-09-30  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Make gtt conditionally compile depending 
	  on the GUILE checks.

Tue Sep 04 01:15:54 2001  George Lebl <jirka@5z.com>

	* Release 1.4.0.99

Tue Sep 04 01:15:40 2001  George Lebl <jirka@5z.com>

	* NEWS: update

Mon Sep 03 22:28:53 2001  George Lebl <jirka@5z.com>

	* gdiskfree/doc/es/Makefile.am: fix for distcheck

Mon Sep 03 17:53:13 2001  George Lebl <jirka@5z.com>

	* **/Makefile.am: correctly EXTRA_DIST all files and other distcheck
	  fixes

	* configure.in: raise version to 1.4.0.3 and gdialog docs dirs

2001-09-03  Kjartan Maraas  <kmaraas@gnome.org>

	* */*.desktop.in: Add .desktop.in files now that xml-i18n-tools
	will handle these too. Fixes bugzilla #55615.
	* */*.keys.in: Same here.
	* po/*: Updated accordingly.