@@ -40,7 +40,7 @@ install-data-local: gshutdown-security
 if CONSOLE_HELPER
 	$(INSTALL_DATA) -D gshutdown-pam $(DESTDIR)$(PAM_PREFIX)/pam.d/gshutdown
 	$(INSTALL_DATA) -D gshutdown-security $(DESTDIR)$(PAM_PREFIX)/security/console.apps/gshutdown
-	$(INSTALL_DATA) -m 755 -d $(sbindir)
-	mv -f $(bindir)/gshutdown $(sbindir)
-	$(LN_S) @CONSOLE_HELPER@ $(bindir)/gshutdown
+	$(INSTALL_DATA) -m 755 -d $(DESTDIR)$(sbindir)
+	mv -f $(DESTDIR)$(bindir)/gshutdown $(DESTDIR)$(sbindir)
+	$(LN_S) @CONSOLE_HELPER@ $(DESTDIR)$(bindir)/gshutdown
 endif
