@@ -1,3 +1,9 @@
+Wed Nov 21 06:49:49 2001  Abel Cheung  <maddog@linux.org.hk>
+
+	* mini-utils/gshutdown/Makefile.am:
+	* logview/Makefile.am:
+	Added missing DESTDIR in install-data-local.
+
 Sat Oct 20 11:42:00 2001  George Lebl <jirka@5z.com>
 
 	* Release 1.4.1.1
